--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@repo/api",
+  "name": "@vendo/api",
   "version": "0.0.0",
   "private": true,
   "license": "MIT",
   "scripts": {
     "dev": "pnpm build --watch",
     "build": "tsc -b -v",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "biome lint .",
+    "format": "biome format --write ."
   },
   "main": "./dist/entry.js",
   "types": "./dist/entry.d.ts",
@@ -30,8 +31,8 @@
     "@nestjs/mapped-types": "*"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@vendo/biome-config": "workspace:*",
+    "@vendo/typescript-config": "workspace:*",
     "@types/node": "^22.10.7",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.2",
