--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,13 +12,14 @@
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\""
+    "lint": "biome lint .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
-    "@repo/api": "workspace:*",
+    "@vendo/api": "workspace:*",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
@@ -27,13 +28,12 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
-    "@repo/eslint-config": "workspace:*",
-    "@repo/jest-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@vendo/biome-config": "workspace:*",
+    "@vendo/jest-config": "workspace:*",
+    "@vendo/typescript-config": "workspace:*",
     "@types/express": "^4.17.17",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.0",
-    "eslint": "^9.31.0",
     "jest": "^29.7.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
