--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "@repo/ui",
+  "name": "@vendo/ui",
   "version": "0.0.0",
   "private": true,
   "exports": {
     "./*": "./src/*.tsx"
   },
   "scripts": {
-    "lint": "eslint . --max-warnings 0",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
     "generate:component": "turbo gen react-component",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "build": "tsc -b",
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@vendo/biome-config": "workspace:*",
+    "@vendo/typescript-config": "workspace:*",
     "@types/node": "^22.15.3",
     "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
-    "eslint": "^9.31.0",
-    "typescript": "5.8.2"
+    "@types/react-dom": "19.1.1"
   },
   "dependencies": {
     "react": "^19.1.0",
