--- a/packages/biome-config/package.json
+++ b/packages/biome-config/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "@vendo/biome-config",
-  "version": "0.0.0",
-  "private": true,
-  "exports": {
-    "./base": "./base.json",
-    "./next-js": "./next.json",
-    "./react-internal": "./react-internal.json",
-    "./nest-js": "./nest.json"
-  }
+	"name": "@vendo/biome-config",
+	"version": "0.0.0",
+	"private": true,
+	"exports": {
+		"./base": "./base.json",
+		"./next-js": "./next.json",
+		"./react-internal": "./react-internal.json",
+		"./react-internal.json": "./react-internal.json",
+		"./nest-js": "./nest.json",
+		"./nest.json": "./nest.json"
+	}
 }
