--- a/package.json
+++ b/package.json
@@ -16,15 +16,23 @@
 		"test:e2e": "turbo run test:e2e",
 		"lint": "biome lint .",
 		"format": "biome format --write .",
-		"type-check": "pnpm -r exec tsc --noEmit"
+		"type-check": "pnpm -r exec tsc --noEmit",
+		"release": "semantic-release",
+		"release:dry": "semantic-release --dry-run"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
 		"@commitlint/cli": "^20.2.0",
 		"@commitlint/config-conventional": "^20.2.0",
 		"@commitlint/types": "^20.2.0",
+		"@semantic-release/changelog": "^6.0.3",
+		"@semantic-release/commit-analyzer": "^13.0.1",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^12.0.2",
+		"@semantic-release/release-notes-generator": "^14.1.0",
 		"@vendo/typescript-config": "workspace:*",
 		"lefthook": "^2.0.12",
+		"semantic-release": "^25.0.2",
 		"turbo": "^2.7.2",
 		"typescript": "^5.9.3"
 	},
