--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,7 +3,11 @@
 		"main",
 		{
 			"name": "development",
-			"prerelease": true
+			"prerelease": "dev"
+		},
+		{
+			"name": "feature/*",
+			"prerelease": "alpha"
 		}
 	],
 	"plugins": [
