--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"format": "biome format --write .",
 		"typecheck": "pnpm -r exec tsc --noEmit",
 		"release": "semantic-release",
-		"release:dry": "semantic-release --dry-run"
+		"release:dry": "semantic-release --dry-run",
+		"clean": "rm -rf ./apps/*/dist ./apps/*/coverage ./apps/*/.next ./apps/*/.turbo ./apps/*/build ./packages/*/dist ./packages/*/coverage ./packages/*/.turbo ./packages/*/build"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.10",
