--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
 
       # 9️⃣ Build the app
       - name: Build
-        run: pnpm --filter ${{ matrix.app }} build
+        run: pnpm --filter ${{ matrix.app }}... build
 
       # 7️⃣ TypeScript typecheck
       - name: Typecheck
