chore: add exclude for biome-check on pre push

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -24,6 +24,9 @@ pre-push:
 
     biome-check:
       glob: "*.{js,ts,tsx,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
+      exclude:
+        - "coverage/**"
+        - "dist/**"
       run: pnpm exec biome check . --files-ignore-unknown=true --no-errors-on-unmatched --colors=off
 
 commit-msg:
