fix: remove unused packages & files

--- a/biome.json
+++ b/biome.json
@@ -8,17 +8,12 @@
 		}
 	},
 	"files": {
-		"ignoreUnknown": true,
-		"includes": [
-			"**",
-			"!.vscode",
-			"!**/dist",
-			"!**/build",
-			"!.turbo",
-			"!**/node_modules",
-			"!**/coverage",
-			"!**/lcov-report"
-		]
+		"ignoreUnknown": true
+	},
+	"vcs": {
+		"enabled": true,
+		"clientKind": "git",
+		"useIgnoreFile": true
 	},
 	"formatter": {
 		"lineWidth": 120,
