--- a/turbo.json
+++ b/turbo.json
@@ -1,17 +1,33 @@
 {
 	"$schema": "https://turborepo.com/schema.json",
-	"globalDependencies": ["**/.env.*local"],
+
+	"globalDependencies": ["package.json", "pnpm-lock.yaml", "turbo.json"],
+
+	"ui": "tui",
 	"tasks": {
+		"build": {
+			"dependsOn": ["^build"],
+			"inputs": ["$TURBO_DEFAULT$"],
+			"outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+		},
+		"lint": {
+			"dependsOn": ["^lint"]
+		},
+		"format": {
+			"dependsOn": ["^format"]
+		},
+		"check-types": {
+			"dependsOn": ["^check-types"]
+		},
 		"dev": {
 			"cache": false,
 			"persistent": true
 		},
-		"build": {
-			"dependsOn": ["^build"],
-			"outputs": [".next/**", "!.next/cache/**", "dist/**"]
+		"test": {
+			"dependsOn": ["^test"]
 		},
-		"lint": {},
-		"test": {},
-		"test:e2e": {}
+		"clean": {
+			"cache": false
+		}
 	}
 }
