chore: add typecheck scripts in apps

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
 		"start": "next start",
 		"lint": "biome lint .",
 		"format": "biome format --write .",
-		"check-types": "tsc --noEmit",
+		"typecheck": "tsc --noEmit",
 		"test": "vitest",
 		"test:watch": "vitest --watch"
 	},
