--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,7 +13,8 @@
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "lint": "biome lint .",
-        "format": "biome format --write ."
+        "format": "biome format --write .",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@nestjs/common": "^11.0.0",
