--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,11 +1,7 @@
 {
 	"extends": "@vendo/typescript-config/nextjs.json",
 	"compilerOptions": {
-		"plugins": [
-			{
-				"name": "next"
-			}
-		]
+		"baseUrl": "./",
 	},
 	"include": [
 		"**/*.ts",
