--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,20 +20,22 @@
         "@nestjs/common": "^11.0.0",
         "@nestjs/core": "^11.0.0",
         "@nestjs/platform-express": "^11.0.0",
+        "@vendo/env": "workspace:*",
         "reflect-metadata": "^0.2.0",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "zod": "^4.2.1"
     },
     "devDependencies": {
         "@jest/globals": "^29.7.0",
         "@nestjs/cli": "^11.0.0",
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.0.0",
-        "@vendo/biome-config": "workspace:*",
-        "@vendo/jest-config": "workspace:*",
-        "@vendo/typescript-config": "workspace:*",
         "@types/express": "^4.17.17",
         "@types/node": "^22.10.7",
         "@types/supertest": "^6.0.0",
+        "@vendo/biome-config": "workspace:*",
+        "@vendo/jest-config": "workspace:*",
+        "@vendo/typescript-config": "workspace:*",
         "jest": "^29.7.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
