--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,14 +13,14 @@
 		"test:watch": "vitest --watch"
 	},
 	"dependencies": {
+		"@vendo/env": "workspace:*",
 		"@vendo/ui": "workspace:*",
 		"next": "16.1.1",
 		"react": "19.2.3",
-		"react-dom": "19.2.3"
+		"react-dom": "19.2.3",
+		"zod": "^4.2.1"
 	},
 	"devDependencies": {
-		"@vendo/biome-config": "workspace:*",
-		"@vendo/typescript-config": "workspace:*",
 		"@tailwindcss/postcss": "^4",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
@@ -28,6 +28,8 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@vendo/biome-config": "workspace:*",
+		"@vendo/typescript-config": "workspace:*",
 		"@vitejs/plugin-react": "^5.1.2",
 		"babel-plugin-react-compiler": "1.0.0",
 		"jsdom": "^27.4.0",
