--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,11 @@ jobs:
       issues: write
       pull-requests: write
 
+    env:
+      NEXT_PUBLIC_API_URL: http://localhost:3000/api/v1
+      NEXT_PUBLIC_APP_URL: http://localhost:3001
+      NODE_ENV: test
+
     steps:
       - uses: actions/checkout@v4
         with:
