docs: update readme's for root & apps

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"description": "Vendo Monorepo is a collection of packages and projects for Vendo platform.",
 	"author": {
-		"name": "Diwash Bhandari",
+		"name": "Diwash Bhattarai",
 		"email": "diwashb999@gmail.com",
 		"url": "https://diwashb.com.np"
 	},
