--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,13 +14,23 @@
         "test:e2e": "jest --config ./test/jest-e2e.json",
         "lint": "biome lint .",
         "format": "biome format --write .",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "db:generate": "prisma generate",
+        "db:migrate": "prisma migrate dev",
+        "db:migrate:reset": "prisma migrate reset",
+        "db:deploy": "prisma migrate deploy",
+        "db:studio": "prisma studio",
+        "db:push": "prisma db push",
+        "db:seed": "prisma db seed"
     },
     "dependencies": {
         "@nestjs/common": "^11.0.0",
         "@nestjs/core": "^11.0.0",
         "@nestjs/platform-express": "^11.0.0",
+        "@prisma/adapter-pg": "^7.2.0",
+        "@prisma/client": "^7.2.0",
         "@vendo/env": "workspace:*",
+        "pg": "^8.16.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "zod": "^4.2.1"
@@ -32,11 +42,13 @@
         "@nestjs/testing": "^11.0.0",
         "@types/express": "^4.17.17",
         "@types/node": "^22.10.7",
+        "@types/pg": "^8.16.0",
         "@types/supertest": "^6.0.0",
         "@vendo/biome-config": "workspace:*",
         "@vendo/jest-config": "workspace:*",
         "@vendo/typescript-config": "workspace:*",
         "jest": "^29.7.0",
+        "prisma": "^7.2.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
