--- a/turbo.json
+++ b/turbo.json
@@ -17,8 +17,13 @@
 
 	"ui": "tui",
 	"tasks": {
+		"db:generate": {
+			"cache": true,
+			"inputs": ["prisma/schema.prisma"],
+			"outputs": ["src/generated/prisma/**"]
+		},
 		"build": {
-			"dependsOn": ["^build"],
+			"dependsOn": ["^build", "db:generate"],
 			"inputs": ["$TURBO_DEFAULT$"],
 			"outputs": ["dist/**", ".next/**", "!.next/cache/**"],
 			"env": ["NEXT_PUBLIC_*", "PORT", "API_PREFIX", "CORS_ORIGIN"]
@@ -30,7 +35,7 @@
 			"dependsOn": ["^format"]
 		},
 		"typecheck": {
-			"dependsOn": ["^build"]
+			"dependsOn": ["^build", "db:generate"]
 		},
 		"dev": {
 			"cache": false,
@@ -38,7 +43,7 @@
 			"env": ["PORT", "HOST", "NEXT_PUBLIC_*"]
 		},
 		"test": {
-			"dependsOn": ["^test"],
+			"dependsOn": ["^test", "db:generate"],
 			"env": ["NODE_ENV", "DATABASE_URL", "REDIS_URL"]
 		},
 		"clean": {
