--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,10 +26,13 @@
     "dependencies": {
         "@nestjs/common": "^11.0.0",
         "@nestjs/core": "^11.0.0",
+        "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/platform-express": "^11.0.0",
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
         "@vendo/env": "workspace:*",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.3",
         "pg": "^8.16.3",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
