--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,7 +33,9 @@
         "@vendo/env": "workspace:*",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
+        "nestjs-pino": "^4.5.0",
         "pg": "^8.16.3",
+        "pino-http": "^11.0.0",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
         "zod": "^4.2.1"
@@ -51,6 +53,7 @@
         "@vendo/jest-config": "workspace:*",
         "@vendo/typescript-config": "workspace:*",
         "jest": "^29.7.0",
+        "pino-pretty": "^13.1.3",
         "prisma": "^7.2.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
