--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
         "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/platform-express": "^11.0.0",
         "@nestjs/swagger": "^11.2.3",
+        "@nestjs/terminus": "^11.0.0",
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
         "@vendo/env": "workspace:*",
