--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
         "@nestjs/core": "^11.0.0",
         "@nestjs/mapped-types": "^2.1.0",
         "@nestjs/platform-express": "^11.0.0",
+        "@nestjs/serve-static": "^5.0.4",
         "@nestjs/swagger": "^11.2.3",
         "@nestjs/terminus": "^11.0.0",
         "@prisma/adapter-pg": "^7.2.0",
