--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -36,6 +36,7 @@
         "@vendo/env": "workspace:*",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
+        "helmet": "^8.1.0",
         "nestjs-pino": "^4.5.0",
         "pg": "^8.16.3",
         "pino-http": "^11.0.0",
