--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -3,6 +3,24 @@
 # ==============================================
 # Copy this file to .env.local and fill in your values
 
+# Node Environment
+NODE_ENV=development
+
 # Server Configuration
 PORT=3000
 HOST=localhost
+
+# Api Configuration
+API_PREFIX=api
+
+# Cors Configuration
+CORS_ORIGIN=http://localhost:3001
+CORS_CREDENTIALS=true
+
+# Database Configuration
+DATABASE_URL=postgresql://vendo_user:vendo_password@localhost:5432/vendo_db
+
+# API Rate Limit Configuration
+API_RATE_LIMIT_TTL=60
+API_RATE_LIMIT_MAX=100
+API_RATE_LIMIT_SKIP_IF=false
