--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
         "@nestjs/serve-static": "^5.0.4",
         "@nestjs/swagger": "^11.2.3",
         "@nestjs/terminus": "^11.0.0",
+        "@nestjs/throttler": "^6.5.0",
         "@prisma/adapter-pg": "^7.2.0",
         "@prisma/client": "^7.2.0",
         "@vendo/env": "workspace:*",
