--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -17,6 +17,10 @@ API_PREFIX=api
 CORS_ORIGIN=http://localhost:3001
 CORS_CREDENTIALS=true
 
+# Cookie Configuration
+COOKIE_SECRET=replace_with_a_long_random_secret_at_least_10_chars
+COOKIE_DOMAIN=localhost
+
 # Database Configuration
 DATABASE_URL=postgresql://vendo_user:vendo_password@localhost:5432/vendo_db
 
