--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,7 @@
         "@vendo/env": "workspace:*",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.3",
+        "cookie-parser": "^1.4.7",
         "helmet": "^8.1.0",
         "nestjs-pino": "^4.5.0",
         "pg": "^8.16.3",
@@ -50,6 +51,7 @@
         "@nestjs/cli": "^11.0.0",
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.0.0",
+        "@types/cookie-parser": "^1.4.10",
         "@types/express": "^4.17.17",
         "@types/node": "^22.10.7",
         "@types/pg": "^8.16.0",
