--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,11 +13,15 @@
 		"test:watch": "vitest --watch"
 	},
 	"dependencies": {
+		"@hugeicons/core-free-icons": "^3.1.1",
+		"@hugeicons/react": "^1.1.4",
 		"@vendo/env": "workspace:*",
 		"@vendo/ui": "workspace:*",
 		"next": "16.1.1",
 		"react": "19.2.3",
 		"react-dom": "19.2.3",
+		"shadcn": "^3.6.2",
+		"tw-animate-css": "^1.4.0",
 		"zod": "^4.2.1"
 	},
 	"devDependencies": {
