--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,7 +1,10 @@
 {
 	"extends": "@vendo/typescript-config/nextjs.json",
 	"compilerOptions": {
-		"baseUrl": "./",
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": [
 		"**/*.ts",
