--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,25 +3,39 @@
 	"version": "0.0.0",
 	"private": true,
 	"exports": {
-		"./*": "./src/*.tsx"
+		".": {
+			"import": "./dist/index.mjs",
+			"types": "./dist/index.d.mts"
+		},
+		"./index.css": "./dist/index.css"
 	},
 	"scripts": {
 		"lint": "biome lint .",
 		"format": "biome format --write .",
-		"generate:component": "turbo gen react-component",
-		"check-types": "tsc --noEmit",
-		"build": "tsc -b",
+		"typecheck": "rm -rf dist && tsup --dts",
+		"build": "tsup",
 		"clean": "rm -rf dist"
 	},
 	"devDependencies": {
-		"@vendo/biome-config": "workspace:*",
-		"@vendo/typescript-config": "workspace:*",
+		"@tailwindcss/postcss": "^4.1.18",
 		"@types/node": "^22.15.3",
 		"@types/react": "19.1.0",
-		"@types/react-dom": "19.1.1"
+		"@types/react-dom": "19.1.1",
+		"@vendo/biome-config": "workspace:*",
+		"@vendo/typescript-config": "workspace:*",
+		"tailwindcss": "^4.1.18",
+		"tsup": "^8.5.1"
 	},
 	"dependencies": {
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"@base-ui/react": "^1.0.0",
+		"@hugeicons/core-free-icons": "^3.1.1",
+		"@hugeicons/react": "^1.1.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"react": "^19.2.3",
+		"react-dom": "^19.2.3",
+		"shadcn": "^3.6.2",
+		"tailwind-merge": "^3.4.0",
+		"tw-animate-css": "^1.4.0"
 	}
 }
