feat: add coming soon page

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,6 +12,6 @@
 		"next-env.d.ts",
 		"next.config.js",
 		".next/types/**/*.ts"
-	],
+, "src/components/shared/background-glow.tsz"	],
 	"exclude": ["node_modules"]
 }
